:bookmark: 发布2.0.18|降级为可变集合